
ChangeLog for jsrsasign

* Changes between 5.0.10 to next version
  - sample_node/showcert added
  - x509.js 1.1.8 to next version
    - X509.DN_ATTRHEX added to show EV cert DN
  - test/qunit-do-x509-getinfo.html
    - test case added for EV cert DN

* Changes between 5.0.9 to 5.0.10
  - sample_node/jwtverify bugfix
  - x509 1.1.7 to 1.1.8
    - following methods are added:
      - getInfo()
      - getExtSubjectKeyIdentifier()
      - getExtAuthorityKeyIdentifier()
      - getExtExtKeyUsageName()
      - getExtSubjectAltName()
      - getExtCRLDistributionPointsURI()

* Changes between 5.0.8 to 5.0.9 (2016-Apr-19)
  - ext/rng.js
    - use window.crypto.getRandomValues for SecureRandom
      if available. (ToDo also for Node.js)

* Changes between 5.0.7 to 5.0.8 (2016-Apr-14)
  - LICENSE.txt small update for years of copyright.
  - ext/x64-core*.js was missed and added
  - x509 1.1.6 to 1.1.7
    - X509.{getHexOfTLV_V3ExtValue,getHexOfV_V3ExtValue} 
      are chageed to return null instead of '' if there 
      is no extension specified by name or oid.
    - X509.getBasicConstraints added
    - X509.getSignatureAlgorithmName added
    - X509.getSignatureValueHex added
    - API document update
  - each *.min.js files are moved to min/ folder.
  - clean up old *-all-min.js

* Changes between 5.0.6 to 5.0.7 (2016-Mar-05)
  - tool_csr.html fix for subject parameter.
  - jsrsasign-latest-all-min wrong order in concatination.
    This raise wrong PKCS#5/8 encrypted PEM private key 
    generation in KEYUTIL.getPEM().
  - sample_node/asn1extract added

* Changes between 5.0.5 to 5.0.6 (2016-Feb-28)
  - bower.json name space fix
  - crypto-1.0 1.0.4 to 1.0.5
    - file removed
  - crypto-1.1 1.1.7 to 1.1.8
    - remove unnecessary evals for strict mode.

* Changes between 5.0.4 to 5.0.5
  - node sample 'jwssign', 'jwtverify', 'asn1dump'
    and 'pemtobin'  added.
  - base64x 1.1.5 to 1.1.6
    - license URL small fix
  - asn1 1.0.8 to 1.0.9