@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="chrome=1" />
 <meta name="description" content="jsjws : pure JavaScript implementation of JSON Web Signature" />
 <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-<title>Online JWT generator and verifyer</title>
+<title>Online JWT generator and verifier</title>
 
 <script language="JavaScript" type="text/javascript" src="http://kjur.github.io/jsrsasign/jsrsasign-latest-all-min.js"></script>
 <script language="JavaScript" type="text/javascript" src="ext/json-sans-eval.js"></script>
@@ -361,7 +361,7 @@ var k6CertPem = "" +
 <!-- HEADER -->
 <div id="header_wrap" class="outer">
 <header class="inner">
-<h1 id="project_title">Online JWT generator and verifyer</h1>
+<h1 id="project_title">Online JWT generator and verifier</h1>
 <h2 id="project_tagline">You can generate and verify signed JSON Web Token(JWT) online.</h2>
 
 <a href="http://kjur.github.io/jsjws/">TOP</a> | 
