@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="chrome=1" />
 <meta name="description" content="jsjws : pure JavaScript implementation of JSON Web Signature" />
 <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-<title>Online JWT verifyer</title>
+<title>Online JWT Verifier</title>
 
 <script language="JavaScript" type="text/javascript" src="jsrsasign-latest-all-min.js"></script>
 
@@ -72,8 +72,8 @@ function _getAcceptField() {
 <!-- HEADER -->
 <div id="header_wrap" class="outer">
 <header class="inner">
-<h1 id="project_title">Online JWT verifyer</h1>
-<h2 id="project_tagline">You can verify JSON Web Token(JWT) on browser.</h2>
+<h1 id="project_title">Online JWT Verfier</h1>
+<h2 id="project_tagline">You can verify JSON Web Token(JWT) in the browser.</h2>
 
 <a href="http://kjur.github.io/jsrsasign/index_jws.html">jws TOP</a> |
 <a href="https://github.com/kjur/jsrsasign/releases" target="_blank">DOWNLOADS</a> | 
